--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
         "joint": "~3.1.1",
         "lodash": "~4.17.4",
         "jsonpath-plus": "~0.13.1",
-        "modernizr": "~3.5.0"
+        "modernizr": "~3.5.0",
+        "alpaca": "~1.5.27"
     },
     "overrides": {
         "bootstrap": {
@@ -26,5 +27,11 @@
     "devDependencies": {
         "chai": "~4.1.2",
         "mocha": "~4.0.1"
+    },
+    "resolutions": {
+        "bootstrap": "3.3.2",
+        "jquery": ">= 2.1.0",
+        "jquery-ui": "~1.12.1",
+        "tinycolor": "1.3.0"
     }
 }
