--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 jobs:
   build:
-    working_directory: ~/cafienne-ide
+    working_directory: ~/qollabor-ng-modeler
     docker:
       - image: circleci/node:10.9.0
     steps:
@@ -30,69 +30,69 @@ jobs:
       - run:
           name: Build docker image
           command: |
-            docker build -t cafienne/ide:latest .
+            docker build -t qollabor-ng-modeler:latest .
       - run:
           name: Push docker image
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ];
             then
               echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
-              docker push cafienne/ide:latest
+              docker push qollabor-ng-modeler:latest
             else
               echo "Not pushing image to docker hub"
             fi
 
-  build for release:
-    working_directory: ~/cafienne-ide
-    docker:
-      - image: circleci/node:10.9.0
-    steps:
-      - checkout
-      - run:
-          name: Giving permissions
-          command: sudo chmod -R 777 ./
-      - run:
-          name: Check for version TAG
-          command: |
-            echo `git describe --tags --exact-match` > ./version.txt
-            cat ./version.txt
-            TAG=$(cat ./version.txt)
-            printenv
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-      - run:
-          name: Installing dependencies
-          command: |
-            npm install
-            sudo npm install bower -g
-            bower install
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-      - setup_remote_docker:
-          docker_layer_caching: false
-      - run:
-          name: Build docker image
-          command: |
-            docker build -t cafienne/ide:$CIRCLE_TAG .
-      - run:
-          name: Push docker image
-          command: |
-            echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
-            docker push cafienne/ide:$CIRCLE_TAG
+  # build for release:
+  #   working_directory: ~/cafienne-ide
+  #   docker:
+  #     - image: circleci/node:10.9.0
+  #   steps:
+  #     - checkout
+  #     - run:
+  #         name: Giving permissions
+  #         command: sudo chmod -R 777 ./
+  #     - run:
+  #         name: Check for version TAG
+  #         command: |
+  #           echo `git describe --tags --exact-match` > ./version.txt
+  #           cat ./version.txt
+  #           TAG=$(cat ./version.txt)
+  #           printenv
+  #     - restore_cache:
+  #         keys:
+  #           - v1-dependencies-{{ checksum "package.json" }}
+  #           # fallback to using the latest cache if no exact match is found
+  #           - v1-dependencies-
+  #     - run:
+  #         name: Installing dependencies
+  #         command: |
+  #           npm install
+  #           sudo npm install bower -g
+  #           bower install
+  #     - save_cache:
+  #         paths:
+  #           - node_modules
+  #         key: v1-dependencies-{{ checksum "package.json" }}
+  #     - setup_remote_docker:
+  #         docker_layer_caching: false
+  #     - run:
+  #         name: Build docker image
+  #         command: |
+  #           docker build -t cafienne/ide:$CIRCLE_TAG .
+  #     - run:
+  #         name: Push docker image
+  #         command: |
+  #           echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
+  #           docker push cafienne/ide:$CIRCLE_TAG
 
 workflows:
   version: 2
   ci:
     jobs:
       - build
-      - build for release:
-          filters:
-            tags:
-              only: /.*/
-            branches:
-              ignore: /.*/
+      # - build for release:
+      #     filters:
+      #       tags:
+      #         only: /.*/
+      #       branches:
+      #         ignore: /.*/
